partridge kata done

--- a/kata/setup.cfg
+++ b/kata/setup.cfg
@@ -43,6 +43,8 @@ exclude =
 [test]
 # py.test options when running `python setup.py test`
 addopts = tests
+    --cov kata --cov-report term-missing
+    --verbose
 
 [tool:pytest]
 # Options for py.test:
